fixed.overflow-contact-list

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,9 @@ body{
 .owner-bar,
 .sing-user{
     min-height: 100px;
+    width: 100%;
 }
+
 
 .icon i{
     color: rgb(167, 165, 165);
@@ -97,8 +99,16 @@ body{
     color: grey;
 }
 
+.side-text-area{
+    max-height: 60px;
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    max-width: 320px;
+}
+
 .last-mex{
-    color: rgb(187, 191, 196);
+    color: rgb(187, 191, 196);   
 }
 
 .text-mex{
